myvpc.json
{

    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "this template for creating VPC",


    "Parameters": {

        
        "publicAZ": {
            "Description": "publicAZ",
            "Type": "AWS::EC2::AvailabilityZone::Name"
           
        },

        
        "privateAZ": {
            "Description": "privateAZ",
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Default": "us-east-2b"
        }
        
        
        
        
        

    },
     
    "Resources":{

        
        "myVPC": {
          "Type": "AWS::EC2::VPC",
          "Properties": {
            "CidrBlock": "192.168.0.0/16"
          }
        },
        
        
        "myIGW": {
          "Type": "AWS::EC2::InternetGateway"
        },
        "AttachGateway": {
          "Type": "AWS::EC2::VPCGatewayAttachment",
          "Properties": {
            "VpcId": 
            { "Ref": "myVPC" }
            ,
            "InternetGatewayId": { "Ref": "myIGW" }
          }
        },

        
        "PublicSubnet": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
            "AvailabilityZone": 
            { "Ref": "publicAZ" }
            ,
            "VpcId": 
            { "Ref": "myVPC" }
            ,
            "CidrBlock": "192.168.1.0/24"
          }
        },


        
        "PublicRouteTable": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": 
            { "Ref": "myVPC" }
            }
        },



        
        "PublicRouteTableAssoc": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId": 
            { "Ref": "PublicSubnet" }
            ,
            "RouteTableId": 
            { "Ref": "PublicRouteTable" }
            
          }
        },

        
        "PublicRoute": {
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId": 
            { "Ref": "PublicRouteTable" }
            ,
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": 
            { "Ref": "myIGW" }
            
          }
        },




        
        "Privatesubnet": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
            "AvailabilityZone": 
            { "Ref": "privateAZ" }
            ,
            "VpcId": 
            { "Ref": "myVPC" }
            ,
            "CidrBlock": "192.168.2.0/24"
          }
        },
                
        "PrivateRouteTable": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": 
            { "Ref": "myVPC" }
           
          }
        },


        
        "PrivaterouteTableAssoc": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId": 
            { "Ref": "Privatesubnet" }
            ,
            "RouteTableId": 
            { "Ref": "PrivateRouteTable" }
            
          }
        },


        "myEIP" : {
          "Type" : "AWS::EC2::EIP"
           },
        
           "myNAT" : {
            "Type" : "AWS::EC2::NatGateway",
            "Properties" : {
               "AllocationId" : { "Fn::GetAtt" : ["myEIP", "AllocationId"]},
               "SubnetId" : { "Ref" : "PublicSubnet"}
              }
         },
        
        
        "PrivateRoute": {
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId": 
            { "Ref": "PrivateRouteTable" }
            ,
            "DestinationCidrBlock": "0.0.0.0/0",
            "NatGatewayId" : { "Ref" : "myNAT" }
          }
        }
        
        
        
        
        

     
        
        
        



    },
    
    "Outputs":{


        
        "myvpc" : {
          "Value" : 
          { "Ref": "myVPC" }
          
        }
        

    }


    


}
